Artsiom_Dziavitski/12.Kubernetes.First_deployment/manifests/nginx-ingress/00-namespace.yml
kind: Namespace
apiVersion: v1
metadata:
  name: hw-12
  labels:
    name: hw-12
