Artsiom_Dziavitski/12.Kubernetes.First_deployment/manifests/nginx-ingress/03-nginx.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: hw-12 
spec:
  type: NodePort 
  selector:
    app: nginx-app
    type: front-end
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30011
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: hw-12 
  labels:
    app: nginx-app
    type: front-end
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx-app
      type: front-end
  template:
    metadata:
      labels:
        app: nginx-app
        type: front-end
    spec:
      volumes:
      - name: nginx-indexhtml
        configMap:
          name: nginx-configmap
      containers:
        - name: nginx-container
          image: nginx:latest
          resources:
            requests:
              cpu: 50m
              memory: 50Mi
            limits:
              cpu: 150m
              memory: 150Mi
          volumeMounts:
          - mountPath: /usr/share/nginx/html/
            name: nginx-indexhtml
