Artsiom_Dziavitski/12.Kubernetes.First_deployment/manifests/nginx-ingress/02-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-sa
  namespace: hw-12
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/server-alias: "app.k8s-19.sa"
spec:
  rules:
    - host: app.k8s-20.sa
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 80
